--- a/estilos/style.css
+++ b/estilos/style.css
@@ -41,21 +41,21 @@ body{
 header{
     background-color: var(--cor5);
     width: 100%;
-    height: 5vh;
+    height: 4vh;
 }
 
 nav{
-    background-image: linear-gradient(to bottom, var(--cor1), var(--cor5    ));
+    background-image: linear-gradient(to bottom, var(--cor1), var(--cor5));
     width:100%;
-    height: 5vh;
+    height: 4.5vh;
     text-align: center;
-    
 
 }
 
+
 nav img{
-    width: 3.5vh;
-    margin: 5px 26px;
+    width: 2.8vh;
+    margin: 7px 15px;
     border-radius: 5px;
     box-sizing: border-box;
 }
@@ -68,18 +68,17 @@ nav img:hover{
 }
 
 .container{
-    background-image: linear-gradient(to right, var(--cor5), var(--cor3) );
+    
+    background-image: linear-gradient(to right, var(--cor5), var(--cor3) ); 
     width: 100%;
     height: 77vh;
-    
 }
-
 
 .titulo h1{
     font-family: 'teste1';
     color: var(--cor2);
-    font-size: 4vw;
-    padding: 10px;
+    font-size: 50px;
+    padding-top: 6vh;
     margin: 0;
     text-align: center;
     
@@ -88,21 +87,20 @@ nav img:hover{
 
 .ttsecund{
     display: flex;
-    gap: 25px;
+    gap: 1vw;
     flex-direction: row;
     justify-content: space-around;
     box-sizing: border-box;
-    margin-top: 65px;
+    margin-top:5vh;
 }
 
 .ttsecund h2{
     font-family: 'teste2';
     color: var(--cor2);
-    font-size: 1.2vw;
+    font-size: 15px;
     box-sizing: border-box;
-    
-
 }
+
 .ttsecund a{
     text-decoration: none;
 }
@@ -115,15 +113,15 @@ nav img:hover{
  
 .imgs{
     display: flex;
-    gap: 50px;
+    gap: 1vw;
     flex-direction: row;
     justify-content: space-around;
-    margin: 2px ; 
+    margin: 5px; 
 }
 
 .imgs img{
-    width: 20vw;
-    height: 16vh;
+    width: 18vw;
+    height: 10vh;
     border-radius: 5px;
     border: 5px double var(--cor1);
       
@@ -137,8 +135,8 @@ nav img:hover{
   
 }
 .container iframe{
-    width: 44vw;
-    height: 40vh;
+    width: 80vw;
+    height: 50vh;
     border-radius: 20px;
     
     
