ajuste de titulo

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -55,7 +55,7 @@ nav{
 
 nav img{
     width: 2.8vh;
-    margin: 7px 15px;
+    margin: 5.5px 15px;
     border-radius: 5px;
     box-sizing: border-box;
 }
@@ -77,7 +77,7 @@ nav img:hover{
 .titulo h1{
     font-family: 'teste1';
     color: var(--cor2);
-    font-size: 48px;
+    font-size: 8vw;
     padding-top: 6vh;
     margin: 0;
     text-align: center;
