--- a/estilos/stylpag.css
+++ b/estilos/stylpag.css
@@ -38,7 +38,7 @@ html body{
     background-image: linear-gradient(to right, var(--cor5), var(--cor3));
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     width: 97vw;
 }
 
@@ -69,6 +69,7 @@ html body{
 .infos img{
     width: 21%;
     height: 35%;
+   
 }
 
 /*CHAMBER*/
@@ -76,7 +77,7 @@ html body{
     background-image: linear-gradient(to right, var(--cor5), var(--cor3));
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     width: 97vw;
     
     
@@ -117,7 +118,7 @@ html body{
     background-image: linear-gradient(to right, var(--cor5), var(--cor3));
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items:start;
     width: 97vw;
     
 }
